Signed-off-by: ancymathew <ancy@hummingsoft.com.my>

--- a/assets/templates/area_progress.html
+++ b/assets/templates/area_progress.html
@@ -5,6 +5,7 @@
 </div>
 <div class="content" style="background: none;/*#1d2a34*/">
     <!--h2>Header h2</h2-->
+    <%console.log(data)%>
     <table class="table table-bordered table-condensed table-hover overall_progress" style="">
         <tr>
             <th></th>
