Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/area_progress.html
+++ b/assets/templates/area_progress.html
@@ -4,116 +4,5 @@
     <i class="header-icon fa fa-check-square-o"></i>
 </div>
 <div class="content" style="background: none;/*#1d2a34*/">
-    <!--h2>Header h2</h2-->
-    <table class="table table-bordered table-condensed table-hover" style="">
-        <thead>
-            <tr>
-                <th></th>
-                <th></th>
-                <th style="color: rgb(255, 212, 97);">Plan</th>
-                <th style="color: rgb(0, 158, 140);">Done</th>
-                <th style="color: rgb(255, 175, 120);">Completed(%)</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Ballast</td>
-                <td>Ballast-Bottom(m)</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Ballast-Top(m)</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td>Trackform</td>
-                <td>Trackform assembly(ballasted)</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Trackform assembly(Special Track)</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>First Tamping</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Second Tamping</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>ballast profile</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td>Conductor Rail</td>
-                <td>Brackets</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Brackets</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Brackets</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Brackets</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td>Turnouts</td>
-                <td>Assembled</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Assembled</td>
-                <td>645</td>
-                <td>646</td>
-                <td>100%</td>
-            </tr>
-            <tr>
-                <td>Misc</td>
-                <td>Bufferstop</td>
-                <td>5</td>
-                <td>5</td>
-                <td>100%</td>
-            </tr>
-        </tbody>
-    </table>
+    <div id="data-portal"></div>
 </div>
