--- a/assets/templates/overall_progress.html
+++ b/assets/templates/overall_progress.html
@@ -40,7 +40,7 @@
             South
             <% } else if(data.data[1].data['region'] == 'ug'){%>
             UG
-            <% } %> Chainage</th>
+            <% } %> Key Dates</th>
         <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Total Progress S-Curve</th>
         <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Variance</th>
         <th rowspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Trend</th>
